finished porting to gradle v7